# pydantic-deepagents

./: CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  repro_subagent_extra_toolsets.py
apps/deepresearch/: pyproject.toml
apps/deepresearch/src/deepresearch/: agent.py  app.py  config.py  middleware.py  todo_toolset.py
apps/deepresearch/workspaces/050c7d98-a3f7-4a4b-8fc2-848d680b2747/: events.jsonl
apps/deepresearch/workspaces/0a3af1d5-065c-42b9-9e7c-d6d91a6d4079/: events.jsonl  meta.json
apps/deepresearch/workspaces/14ff7a7e-bf25-4823-b036-08833a8052dc/: events.jsonl  history.json  meta.json
apps/deepresearch/workspaces/17982ff1-0e56-40ba-acac-1447d47b7828/: events.jsonl  meta.json
apps/deepresearch/workspaces/345eb1c8-68a7-4768-905b-e5fc09b3f265/: events.jsonl  meta.json
apps/deepresearch/workspaces/47506bec-2ee8-4538-9225-e69769817d67/: events.jsonl
apps/deepresearch/workspaces/68b4c197-83a2-4e10-928a-31d9b6100728/: events.jsonl  history.json  meta.json
apps/deepresearch/workspaces/7639818d-d9fd-4021-b63a-32a03178a293/: events.jsonl  history.json  meta.json
apps/deepresearch/workspaces/789d749c-9dc0-47e9-bbc8-bcfc134c573b/: events.jsonl  meta.json
apps/deepresearch/workspaces/8701018a-7609-460a-8b1d-7da55b0940ac/: events.jsonl  history.json  meta.json
apps/deepresearch/workspaces/8aafbf32-6c32-44cf-8db4-8702ceb9f7f5/: events.jsonl  meta.json
apps/deepresearch/workspaces/98495b14-0d71-4617-a569-7a8f0b23d300/: events.jsonl  history.json  meta.json
apps/deepresearch/workspaces/9a49db6a-4db2-4b19-afbd-cb5a6955b126/: events.jsonl  (+2 more)
(+139 files in other folders)
